# boj-stat-search-python

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  update-metadata.yml
docs/: README.md  data_code_actual_response_format.md
docs/api_manual/: README.md  manual_vs_actual.md  request_basics.md  response_shapes.md
docs/development_guide/: README.md  architecture.md  metadata_licensing.md  release_process.md  testing.md
docs/user_guide/: README.md  architecture.md  cli.md  getting_started.md  layer_tree_display.md  querying_data.md
metadata/: BIS.parquet  BP01.parquet  BS01.csv  BS01.parquet  BS02.csv  BS02.parquet  DER.csv  DER.parquet  FF.parquet  FM01.csv  FM01.parquet  FM02.csv  FM02.parquet  FM03.csv  FM03.parquet  FM04.csv  FM04.parquet  FM05.csv  FM05.parquet  FM06.csv  FM06.parquet  FM07.csv  FM07.parquet  FM08.csv  FM08.parquet  FM09.csv  FM09.parquet  IR01.csv  IR01.parquet  IR02.csv  IR02.parquet  IR03.csv  IR03.parquet  IR04.csv  IR04.parquet  LA01.csv  LA01.parquet  LA02.csv  LA02.parquet  LA03.csv  (+54 more)
src/boj_stat_search/: __init__.py  api_request.py  client.py  database.py  models.py  parser.py  url_builder.py
tests/: test_api_request.py  test_catalog_loader.py  test_catalog_parser.py  test_catalog_search.py  test_cli.py  test_client.py  test_display.py  test_formatter.py  test_metadata_export.py  test_parser.py  test_public_api.py  test_types.py  test_url_builder.py  test_validator.py
tests/core/: test_error_parser.py  test_formatter.py  test_request_planner.py  (+1 more)
(+32 files in other folders)
