[project]
name = "boj-stat-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saviour", email = "savioursho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
boj-stat-search = "boj_stat_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.19.11",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
