[project]
name = "boj-stat-search"
version = "0.1.0"
description = "Python client for the Bank of Japan Time Series Statistical Data Search API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "saviour", email = "savioursho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.15.0",
]

[project.scripts]
boj-stat-search = "boj_stat_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.19.11",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
